--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>x
-        <title>Hello,  World!</title>
+    <head>
+                <title>Hello,  World!</title>
     </head>
     
     <body bgcolor=' ADD8E6'>
@@ -9,15 +9,15 @@
     
         <h1> Background is  blue </h1>
     <script>
-        function doSomething() {
-             alert('do something');
-            console.log('do something ')
+        function hello() {
+            var name = document.getElementById("name").value; 
+             alert('hello '+name);
         }            
     </script>
 
     <form action ="/my -handling-form-page" methon="post">
     <label for="name">Name:</label>
     <input type  ="text"   id="name" name ="user_name">
-    <button type="button" onClick="doSomething()">Press me!</button>
+    <button type="button" onClick="hello()">Press me!</button>
 </body>
 </html>
