add another pop up

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
           var First_name = document.getElementById("First_name").value;
           var Last_name = document.getElementById("Last_name").value; 
              alert('Hello '+First_name+' '+Last_name);
-        }         
+             var time = 5000;
+
+            setTimeout(function() { alert("5 seconds has passed"); }, time);    
+        }    
+        
     </script>
 
     <form action ="/my -handling-form-page" methon="post">
