--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         function Hello() {
           var First_name = document.getElementById("First_name").value;
           var Last_name = document.getElementById("Last_name").value; 
-          var Address = document.getElementById("Address").value;
-          var Address = document.getElementById("Address2").value;
-             alert('Hello '+First_name+' '+Last_name '+address1+ ');        
+          var Address1 = document.getElementById("Address1").value;
+          var Address2 = document.getElementById("Address2").value;
+             alert('Hello '+First_name+' '+Last_name );
+        }        
     </script>
         
 
