--- a/LIam.html
+++ b/LIam.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <body bgcolor='red'>
-<head>
+    <head>
+        <style>
+            .container {
+                height: 100%;
+                width: 100%;
+                display: flex;
+                position: fixed;
+                align-items: center;
+                justify-content: center;
+            }
+        </style>
+     <title>Center</title>
+    </head>
+ <body bgcolor='red'>
+    
 
-</head>
-<font size="+3">Liam Santasiero<br> 12 Lowell ST.<br> South East Maine 04106<br> USA</font>
+    <div class="container">
+            <font size="+4">Liam Santasiero<br> 12 Lowell ST.<br> South Portland Maine 04106<br> USA </font>
+            
+
+        </div>
+      </div>
+
+
+
+
     </body>
-</html>
+</html> 
